# cot-proto

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: base.rs  detail.rs  examples.rs  lib.rs
src/tak/: create.rs  detail.rs  detect.rs  mod.rs
