[package]
name = "cot-proto"
description = "Cursor on Target (CoT) protocol (de)serialization / parsing"
version = "0.3.1"
edition = "2021"
keywords = ["cot", "protocol", "cursor_on_target"]
categories = ["network-programming"]
license = "Apache-2.0"
repository = "https://github.com/ajfabbri/cot-proto"
documentation = "https://docs.rs/cot-proto"
rust-version = "1.74"
authors = ["Aaron Fabbri"]

[dependencies]
quick-xml = { version = "0.37.0", features = ["serialize"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.68"
