[package]
name = "cot-proto"
description = "Cursor on Target (CoT) protocol (de)serialization / parsing"
version = "0.3.4"
edition = "2021"
keywords = ["cot", "protocol", "cursor_on_target"]
categories = ["network-programming"]
license = "Apache-2.0"
repository = "https://github.com/ajfabbri/cot-proto"
documentation = "https://docs.rs/cot-proto"
rust-version = "1.74"
authors = ["Aaron Fabbri"]

[features]
default = ["tak"]
# test all features: use this in CI
test-default = ["tak"]

tak = []

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std", "now"] }
quick-xml = { version = "0.37.0", features = ["serialize"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.68"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
serde_json = { version = "1.0.132" }
